# image_recognition

./: .gitignore  Cargo.toml
ml/: model_initializer.py
ml/model/: saved_model.pb
ml/model/variables/: variables.data-00000-of-00001  variables.index
model/: saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
src/: main.rs
