[package]
name = "image_recognition"
version = "0.1.0"
authors = ["Nikita Borgolov <nikita.borgolov@nordigy.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.16.0", features = ["tensorflow_gpu"] }
random = "0.12.2"
